# heterogeneous-tree-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: c-cpp.yml
visitor_impl/: CMakeLists.txt  types_id.h  visitor_impl.cpp  visitor_impl.h
visitor_impl/tests/: CMakeLists.txt  test_print.cpp  test_serializer.cpp
